--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
   "name": "cspray/marked-logs",
   "description": "A PSR-11 Logger that will ensure all logs have their context marked with an identifier.",
+  "keywords": ["logger"],
+  "license": ["MIT"],
   "require": {
     "php": "^8.1",
     "psr/log": "^3.0"
